tests/mm0_mmu/fail/bad-sort2431.mm0
-- bad modifier order
strict free provable pure sort s2431;